feat: cashier
